ecmascript/parser/tests/test262-error-references/fail/f0463cd0addb96cc.module.js.stderr
error: Unexpected token Some(Semi). Expected one of a string literal
 --> $DIR/tests/test262-parser/fail/f0463cd0addb96cc.module.js:1:15
  |
1 | import {} from;
  |               ^

